--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -1,5 +1,10 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage{amsfonts,amsmath,amssymb,anysize,cancel,fancyhdr,graphicx,listings,siunitx,verbatim,xfrac,xcolor}
+\usepackage{amsfonts,amsmath,amssymb,anysize}
+\usepackage{bibentry,blindtext,braket,cancel}
+\usepackage{fancyhdr,graphicx}
+\usepackage{listings,multicol,mathtools}
+\usepackage{siunitx,verbatim}
+\usepackage{xfrac,xcolor}
 
 \marginsize{1.5cm}{1.5cm}{1cm}{1cm}
 \linespread{1.5}
@@ -11,54 +16,137 @@
 
 \begin{document}
 \subsection*{\underline{The Wave Function:}}
-$\Psi(x,t)$ obeys Schrodinger's equation
-\begin{align*}
-    &\int_{-\infty}^\infty |\Psi(x,t)|^2dx=1&& \rho(x,t)=|\Psi(x,t)|^2\\
-    \langle \hat{x}\rangle&=\int_{-\infty}^\infty x|\Psi(x,t)|^2dx;&&\langle \hat{p}\rangle=\int_{-\infty}^\infty \Psi^*(x,t)\frac{\hbar}{i}\frac{\partial}{\partial x}\Psi(x,t)dx;\\
-    \langle Q(\hat{x},\hat{p})\rangle&=\int_{-\infty}^\infty \Psi^*(x,t)Q(x,\frac{\hbar}{i}\frac{\partial}{\partial x})\Psi(x,t)dx&&J(x,t)=\frac{i\hbar}{2m}\left( \Psi\frac{\partial \Psi^*}{\partial x}-\Psi^*\frac{\partial \Psi}{\partial x} \right)\\
-    i\hbar \frac{\partial }{\partial t}\Psi(x,t)&=\left[ -\frac{\hbar^2}{2m}\frac{\partial^2}{\partial x^2}+V(x) \right] \Psi(x,t)&&\mathbf{\hat{H}}\psi(x)=\left[ -\frac{\hbar^2}{2m}\frac{\partial^2}{\partial x^2}+V(x) \right] \psi(x)=E\psi(x)\\
-    \Psi(x,t)&=\psi(x)\phi(t)&&\phi(t)=e^{-iEt/\hbar} 
-\end{align*}
+$\Psi(x,t)$ obeys Schrodinger's equation, and the normalization condition $\int_{-\infty}^\infty |\Psi(x,t)|^2dx=1$:
+\begin{flalign*}
+    &\braket{x}=\int_{-\infty}^\infty x|\Psi(x,t)|^2dx;
+    &&\braket{p}=\int_{-\infty}^\infty \Psi^*(x,t)\frac{\hbar}{i}\frac{\partial}{\partial x}\Psi(x,t)dx;
+    &&\braket{Q(\hat{x},\hat{p})}=\int_{-\infty}^\infty \Psi^*(x,t)Q\Psi(x,t)dx
+    &\\
+    &i\hbar \frac{\partial }{\partial t}\Psi(x,t)=H\Psi(x,t)
+    &&\Psi(x,t)=\psi(x)e^{-iEt/\hbar}
+    &&H\psi(x)=E\psi(x)
+    &\\
+    &\rho(x,t)=|\Psi(x,t)|^2;
+    &&\frac{\partial \rho}{\partial t}+\frac{\partial J}{\partial x}=0;
+    &&J(x,t)=\frac{i\hbar}{2m}\left( \Psi\frac{\partial \Psi^*}{\partial x}-\Psi^*\frac{\partial \Psi}{\partial x} \right)
+    &
+\end{flalign*}
+A Hermitian operator $Q$ obey: $\int\psi^*(x)Q\psi(x)\,dx=\int(Q\psi(x))^*\psi(x)\,dx$.
 \subsection*{\underline{Properties of the Solution of 1D stationary Schrodinger Equation:}}
-
 \begin{enumerate}
 \item For 1D potential, all stationary solutions are non-degenerate.
-\item Stationary square integrable solution exist only for E > min{V(x)} 
+\item Stationary square integrable solution exist only for $E > min{V(x)}$ 
 \item If V(x) is real, then $\Psi$(x) can be taken to be real.
 \item Eigenvalues of a Hermitian Hamiltonian are all real.
-\item The eigenfunctions of a Hermitian operator form a complete orthogonal basis set.
-\item 1D Solution is real up to an over all phase.
+\item The eigenfunctions of a Hermitian operator form a complete orthogonal basis set, for smooth potentials.
+\item 1D Schrodinger equation Solution is real up to an over all phase.
 \item For a given 1D even potential the stationary states are either even or odd.
-\item The wave function and its first order space derivative is continuous all over and in particular at the boundaries of a finite potential.
+\item The wave function and its first order space derivative is continuous all over space and in particular at the boundaries of a finite potential.
 \item At boundaries with Dirac delta function potential, the first space derivative of the wavefunction is discontinuous. 
 \item Physical solution should be finite all over space, no blow ups, in particular at infinity.
 \item The number of nodes (zeros) of the eigenfunction increases by one unit as we move from the ground state (zero nodes) to higher excited states.
 \item Bound states exist only for confining potential (classically between turning points of the potential).
 \end{enumerate}
 \subsection*{\underline{Complete Basis Set:}}
-Given that:
-\begin{equation*}
-    H\psi_n(x)-E_n\psi_n(x)\quad \int\phi^*_n(x)\phi_m(x)dx=\delta_{nm}
-\end{equation*}
-Then, where $\{\phi_n\}$ is a complete set:
+Given that $H\psi_n(x)=E_n\psi_n(x);\quad \int\phi^*_n(x)\phi_m(x)dx=\delta_{nm}$, where $\{\phi_n\}$ is a complete set, then:
 \begin{align*}
     \psi(x)&=\sum_nc_n\phi_n(x)\\
     \int\psi^*(x)\psi(x)dx&=\sum_n|c_n|^2=1\\
     E&=\int\psi^*_n(x)H\psi_m(x)dx=\sum_n|c_n|^2E_n\\
-    \Psi(x,0)&=\psi(x)=\sum_nc_n\phi_n(x)\implies\Psi(x,t)=\sum_nc_ne^{-iEt/\hbar}\phi_n(x)\\
-    a_n&=\int\phi_n^*\Psi(x,0)dx
+    \Psi(x,0)&=\psi(x)=\sum_nc_n\phi_n(x)\implies\Psi(x,t)=\sum_nc_ne^{-iE_nt/\hbar}\phi_n(x)\\
+    c_n&=\int\phi_n^*\Psi(x,0)dx
 \end{align*}
 \subsection*{\underline{Commutator Properties:}}
 \begin{align*}
     &[A,A]=0\\
     &[A,B]=-[B,A]\\
     &[A+B,C]=[A,C]+[B,C]\\
-    &[A,[B,C]]+[B,[C,A]]+[C,[A,B]]=0
+    &[A,[B,C]]+[B,[C,A]]+[C,[A,B]]=0\\
+    &[AB,C]=[A,C]B+A[B,C]\\
+    &[A,BC]=[A,B]C+B[A,C]
 \end{align*}
+\subsection*{\underline{Operators:}}
+If $a$ is an eigenvalue of the operator $\hat{A}$, $\hat{A}\psi=a\psi$. Then, the following properties hold:
+\begin{itemize}
+    \item $\hat{A}^n\psi=a^n\psi,\quad \hat{A}^{-1}\psi=a^{-1}\psi,\quad e^{i\hat{A}}\psi=e^{ia}\psi,\quad F(\hat{A})\psi=F(a)\psi$
+    \item $\hat{A}^{\dagger}=A,\ \hat{A}\ket{\phi_n}=a_n\ket{\phi_n} \quad \implies a_n\in \mathbb{R}, \braket{\phi_m|\phi_n}=\delta_{mn}$
+    \item If $\{\phi_n\}$ is a complete and orthonormal for a Hermitian operator, then the operator is diagonal in the eigenbasis, $\{\phi_n\}$, with eigenvalues,, $\{a_n\}$, as the diagonal elements. The basis set is unique iff there are no degenerate eigenvalues.
+    \item If two Hermitian operators, $\hat{A}$ and $\hat{B}$, commute and have no degenerate eigenvalues. Then each eigenvector of $\hat{A}$ is also an eigenvector of $\hat{B}$. A common orthonormal basis can be made of the joint eigenvectors of $\hat{A}$ and $\hat{B}$.
+\end{itemize}
+\subsection*{\underline{1D Infinite Square Well:}}
+\begin{align*}
+    &V(x)=\left\{
+        \begin{matrix}
+            0, 0\leq x\leq a\\
+            \infty, \mathrm{otherwise}
+        \end{matrix}
+    \right.
+    &
+    &E_n=\frac{\hbar^2k_n^2}{2m}=\frac{n^2\pi^2\hbar^2}{2ma^2}
+    \\
+    &\Psi(x,t)=\sum_{n=1}^\infty c_n\sqrt{\frac{2}{a}}\sin\left( \frac{n\pi}{a}x \right)e^{-iE_nt/\hbar}
+    &
+    &c_n=\sqrt{\frac{2}{a}}\int_0^a\sin\left( \frac{n\pi}{a}x \right)\Psi(x,0)\,dx
+\end{align*}
+\subsection*{\underline{Ring:}}
+\begin{align*}
+    &\psi_\pm(\theta)=\frac{1}{\sqrt{2\pi}}\exp{\pm i\frac{R\theta}{\hbar}\sqrt{2mE}};
+    &
+    &x=R\theta
+    \\
+    &\psi(\theta)=\frac{1}{\sqrt{2\pi}}\exp{\pm in\theta}
+    &
+    &E_n=\frac{n^2\hbar^2}{2mR^2},\quad n=0\pm 1,\pm 2,\pm 3,...
+\end{align*}
+\subsection*{\underline{Harmonic Oscillator:}}
+\begin{align*}
+    &V(x)=\frac{1}{2}kx^2=\frac{1}{2}m(\omega x)^2\quad \left( \omega\equiv\sqrt{k/m} \right)
+    &
+    &E_n=\hbar\omega\left( n+\frac{1}{2} \right)
+    \\
+    &H=\frac{1}{2m}[p^2+(m\omega x)^2]=\hbar\omega\left( N+\frac{1}{2} \right)
+    &
+    &N=a_+a_-\quad (=a^\dagger a)
+    \\
+    &N\psi_n=n\psi_n
+    &
+    &N(a_+\psi_n)=[N,a_+]\psi_n
+    \\
+    &[N,a_\pm]=\pm a_\pm
+    &
+    &a_\pm\equiv \frac{1}{\sqrt{2\hbar m\omega}}\left( \mp ip+m\omega x \right)
+    \\
+    &a_+\psi_n=\sqrt{n+1}\psi_{n+1}
+    &
+    &a_-\psi_n=\sqrt{n}\psi_{n-1}
+    \\
+    &\psi_0(x)=\left( \frac{m\omega}{\pi\hbar} \right)^{1/4}\exp\left( -\frac{m\omega}{2\hbar}x^2 \right)
+    &
+    &\psi_n=\frac{1}{\sqrt{n!}}(a_+)^n\psi_0
+    \\
+    &\xi\equiv\sqrt{\frac{m\omega}{\hbar}}x
+    &
+    &\mathcal{H}_n(\xi)=(-1)^ne^{\xi^2}\left( \frac{d}{d\xi} \right)^ne^{-\xi^2}
+\end{align*}
+\begin{equation*}
+    \psi_n(x)=\left( \frac{m\omega}{\pi\hbar} \right)^{1/4}\frac{1}{\sqrt{2^n n!}}\mathcal{H}_n(\xi)e^{-\xi^2/2}
+\end{equation*}
+\subsection*{\underline{Models of Dirac Delta Distribution $\delta(x)$:}}
+\begin{equation*}
+    (1)\ \lim_{\alpha\rightarrow\infty}\frac{\sin(\alpha x)}{\pi x}\\
+    \qquad
+    (2)\ \lim_{\epsilon\rightarrow0^+}\frac{1}{2\pi}\int_{-\infty}^{\infty}e^{-ikx}e^{-\epsilon |k|}\,dk=\lim_{\epsilon\rightarrow0^+}\frac{\epsilon}{\pi (x^2+\epsilon^2)}\\
+    \qquad
+    (3)\ \lim_{\epsilon\rightarrow0}\frac{\Theta(x+\epsilon)-\Theta(\epsilon)}{\epsilon}
+\end{equation*}
+where $\Theta(x)$ is Heaviside or step function. 
 \subsection*{\underline{Miscellaneous:}}
 \begin{align*}
-    \int_{-\infty}^\infty e^{-a(x+b)^2}\, dx=\sqrt{\frac{\pi}{a}}& 
-    &\delta_{ij}=\left\{
+    \int_{-\infty}^\infty e^{-ax^2}\, dx=\sqrt{\frac{\pi}{a}}
+    &&
+    \int_{-\infty}^\infty e^{-(ax^2+bx)}\,dx=e^{b^2/4a}\sqrt{\frac{\pi}{a}}
+    &&
+    \delta_{ij}=\left\{
         \begin{matrix}
             1,\quad i=j\\
             0,\quad i\neq j
