Title + Move Section
1) The title has been added

2) The "Properties of the Solution of 1D stationary Schrodinger Equation" subsection has been moved to the top of the page -just under the title-, instead of below "The Wave Function" subsection.

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -15,6 +15,22 @@
 \rhead{Formula Sheet}
 
 \begin{document}
+\begin{center}\textbf{\underline{\huge{Formula Sheet}}}\end{center}
+\subsection*{\underline{Properties of the Solution of 1D stationary Schrodinger Equation:}}
+\begin{enumerate}
+\item For 1D potential, all stationary solutions are non-degenerate.
+\item Stationary square integrable solution exist only for $E > min{V(x)}$ 
+\item If V(x) is real, then $\Psi$(x) can be taken to be real.
+\item Eigenvalues of a Hermitian Hamiltonian are all real.
+\item The eigenfunctions of a Hermitian operator form a complete orthogonal basis set, for smooth potentials.
+\item 1D Schrodinger equation Solution is real up to an over all phase.
+\item For a given 1D even potential the stationary states are either even or odd.
+\item The wave function and its first order space derivative is continuous all over space and in particular at the boundaries of a finite potential.
+\item At boundaries with Dirac delta function potential, the first space derivative of the wavefunction is discontinuous. 
+\item Physical solution should be finite all over space, no blow ups, in particular at infinity.
+\item The number of nodes (zeros) of the eigenfunction increases by one unit as we move from the ground state (zero nodes) to higher excited states.
+\item Bound states exist only for confining potential (classically between turning points of the potential).
+\end{enumerate}
 \subsection*{\underline{The Wave Function:}}
 $\Psi(x,t)$ obeys Schrodinger's equation, and the normalization condition $\int_{-\infty}^\infty |\Psi(x,t)|^2dx=1$:
 \begin{flalign*}
@@ -32,21 +48,6 @@ $\Psi(x,t)$ obeys Schrodinger's equation, and the normalization condition $\int_
     &
 \end{flalign*}
 A Hermitian operator $Q$ obey: $\int\psi^*(x)Q\psi(x)\,dx=\int(Q\psi(x))^*\psi(x)\,dx$.
-\subsection*{\underline{Properties of the Solution of 1D stationary Schrodinger Equation:}}
-\begin{enumerate}
-\item For 1D potential, all stationary solutions are non-degenerate.
-\item Stationary square integrable solution exist only for $E > min{V(x)}$ 
-\item If V(x) is real, then $\Psi$(x) can be taken to be real.
-\item Eigenvalues of a Hermitian Hamiltonian are all real.
-\item The eigenfunctions of a Hermitian operator form a complete orthogonal basis set, for smooth potentials.
-\item 1D Schrodinger equation Solution is real up to an over all phase.
-\item For a given 1D even potential the stationary states are either even or odd.
-\item The wave function and its first order space derivative is continuous all over space and in particular at the boundaries of a finite potential.
-\item At boundaries with Dirac delta function potential, the first space derivative of the wavefunction is discontinuous. 
-\item Physical solution should be finite all over space, no blow ups, in particular at infinity.
-\item The number of nodes (zeros) of the eigenfunction increases by one unit as we move from the ground state (zero nodes) to higher excited states.
-\item Bound states exist only for confining potential (classically between turning points of the potential).
-\end{enumerate}
 \subsection*{\underline{Complete Basis Set:}}
 Given that $H\psi_n(x)=E_n\psi_n(x);\quad \int\phi^*_n(x)\phi_m(x)dx=\delta_{nm}$, where $\{\phi_n\}$ is a complete set, then:
 \begin{align*}
