--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -74,6 +74,12 @@ If $a$ is an eigenvalue of the operator $\hat{A}$, $\hat{A}\psi=a\psi$. Then, th
     \item If $\{\phi_n\}$ is a complete and orthonormal for a Hermitian operator, then the operator is diagonal in the eigenbasis, $\{\phi_n\}$, with eigenvalues,, $\{a_n\}$, as the diagonal elements. The basis set is unique iff there are no degenerate eigenvalues.
     \item If two Hermitian operators, $\hat{A}$ and $\hat{B}$, commute and have no degenerate eigenvalues. Then each eigenvector of $\hat{A}$ is also an eigenvector of $\hat{B}$. A common orthonormal basis can be made of the joint eigenvectors of $\hat{A}$ and $\hat{B}$.
 \end{itemize}
+\subsection*{\underline{Uncertainty Principle:}}
+\begin{align*}
+    &(\Delta Q)^2 = \braket{Q^2} - \braket{Q}^2 = \braket{(Q-\braket{Q})^2}
+    &\Delta x \Delta p \geq \frac{\hbar}{2}
+\end{align*}
+Where $\Delta Q$ is the uncertainity for the Hermitian Operator Q.
 \subsection*{\underline{1D Infinite Square Well:}}
 \begin{align*}
     &V(x)=\left\{
