Bound State + Scattering State
Both "Bound State" and "Scattering State" subsections have been added.

--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -151,6 +151,25 @@ Where $\Delta Q$ is the uncertainity for the Hermitian Operator Q.
     (3)\ \lim_{\epsilon\rightarrow0}\frac{\Theta(x+\epsilon)-\Theta(\epsilon)}{\epsilon}
 \end{equation*}
 where $\Theta(x)$ is Heaviside or step function. 
+\subsection*{\underline{Bound State:}}
+\begin{align*}
+    &\psi(x)=\sqrt{\frac{m\alpha}{\hbar^2}}\ e^{\frac{m\alpha}{\hbar^2}|\alpha|}
+\end{align*}
+\subsection*{\underline{Scattering State:}}
+\begin{align*}
+    &V(x)=\left\{
+        \begin{matrix}
+            Ae^{ikx}+Be^{-ikx}, x\leq0\\
+            Fe^{ikx}, x\geq0
+        \end{matrix}
+    \right.
+    &
+    &\beta = \frac{m\alpha}{\hbar^2k}
+    \\
+    &T=\frac{|F|^2}{|A|^2}=\frac{1}{1+\beta^2}
+    &
+    &R=\frac{|B|^2}{|A|^2}=\frac{\beta}{1+\beta}
+\end{align*}
 \subsection*{\underline{Miscellaneous:}}
 \begin{align*}
     \int_{-\infty}^\infty e^{-ax^2}\, dx=\sqrt{\frac{\pi}{a}}
