--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -219,4 +219,21 @@ where $\Theta(x)$ is Heaviside or step function.
         \end{matrix}
     \right.
 \end{align*}
+\subsection*{\underline{Matrix Algebra:}}
+Let M be a 2X2 matrix then:
+\begin{align*}
+     &M=\left(
+        \begin{matrix}
+            a     &b\\
+            c     &d
+        \end{matrix}
+    \right).
+    &&|M| = ad-bc
+    &M^{-1}=\frac{1}{|M|}\left(
+        \begin{matrix}
+            d     &-b\\
+            -c     &a
+        \end{matrix}
+    \right).
+\end{align*}
 \end{document}
