--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -1,9 +1,9 @@
-    \documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{article}
 \usepackage{amsfonts,amsmath,amssymb,anysize}
 \usepackage{bibentry,blindtext,braket,cancel}
 \usepackage{fancyhdr,graphicx}
 \usepackage{listings,multicol,mathtools}
-\usepackage{siunitx,verbatim}
+\usepackage{pdfpages,siunitx,verbatim}
 \usepackage{xfrac,xcolor}
 
 \marginsize{1.5cm}{1.5cm}{1cm}{1cm}
@@ -15,6 +15,7 @@
 \rhead{Formula Sheet}
 
 \begin{document}
+\includepdf{Constants.pdf}
 \begin{center}\textbf{\underline{\huge{Formula Sheet}}}\end{center}
 \subsection*{\underline{Properties of the Solution of 1D stationary Schrodinger Equation:}}
 \begin{enumerate}
