--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -34,34 +34,54 @@
 \end{enumerate}
 \subsection*{\underline{The Origin of Quantum Physics:}}
 \begin{align}
-    &E=h\nu
-    &p=\frac{h}{\lambda}
-    &\\
-    &E=\hbar\omega
-    &p=\hbar k
+    &E=h\omega
+    &p=\frac{h}{\lambda}=\hbar k
     &\\
     &\lambda=\frac{h}{p}
     &\lambda_C = \frac{h}{mc}
 \end{align}
+\subsection*{\underline{Blackbody Radiation:}}
+Plank energy spectral density: \resizebox{.4\hsize}{!}{$\rho(\nu)=\frac{8\pi h \nu^3}{c^3}\left[ \frac{1}{\exp \left(\frac{h\nu}{k_BT} \right)-1} \right]$}
+\vspace{0.3cm}
+\hrule
+\subsection*{\underline{Photoelectric Effect:}}
+$W$ is the work function of irradiated metal. $V_e$ is the stopping potential.
+$$K=\sfrac{1}{2}\ mv^2=h\nu-W=\frac{hc}{\lambda}-W\ ;\quad K=\sfrac{1}{2}\ mv^2=|e|V_s\leftrightarrow V_s=\frac{K}{|e|}$$
+$$\nu\geq\frac{W}{h}=\nu_{\min};\quad \nu=\frac{1}{T}=\frac{c}{\lambda};\quad \nu=\frac{\omega}{2\pi}$$
+% \vspace{0.3cm}
+\hrule
+\subsection*{\underline{de Broglie Formula:}}
+$$\lambda=\frac{h}{p}=\frac{h}{mv}$$
+\vspace{0.3cm}
+\hrule
+\subsection*{\underline{Bohr Hydrogen-like Atom:}}
+\begin{align*}
+    &E_n=-\frac{Z^2}{n^2}R&\ &\quad R=13.6\,\unit{\electronvolt}\\
+    &r_n=\frac{a_0}{Z}n^2&\ &\quad a_0=0.53\times10^{-10}\,\unit{\metre}\\
+    &h\nu=E_n-E_m=Z^2R\left( \frac{1}{m^2}-\frac{1}{n^2} \right)&\ &\quad n>m
+\end{align*}
 \subsection*{\underline{The Wave Function:}}
 $\Psi(x,t)$ obeys Schrodinger's equation, and the normalization condition $\int_{-\infty}^\infty |\Psi(x,t)|^2dx=1$:
+\begin{equation}
+    \braket{x}=\int_{-\infty}^\infty x|\Psi(x,t)|^2dx;
+    \braket{p}=\int_{-\infty}^\infty \Psi^*(x,t)\frac{\hbar}{i}\frac{\partial}{\partial x}\Psi(x,t)dx;
+    \braket{Q(\hat{x},\hat{p})}=\int_{-\infty}^\infty \Psi^*(x,t)Q\left( x,\frac{h}{i} \frac{\partial}{\partial x} \right)\Psi(x,t)dx
+\end{equation}
 \begin{flalign}
-    &\braket{x}=\int_{-\infty}^\infty x|\Psi(x,t)|^2dx;
-    &&\braket{p}=\int_{-\infty}^\infty \Psi^*(x,t)\frac{\hbar}{i}\frac{\partial}{\partial x}\Psi(x,t)dx;
-    &&\braket{Q(\hat{x},\hat{p})}=\int_{-\infty}^\infty \Psi^*(x,t)Q\Psi(x,t)dx
-    &\\
-    &i\hbar \frac{\partial }{\partial t}\Psi(x,t)=H\Psi(x,t)
-    &&\Psi(x,t)=\psi(x)e^{-iEt/\hbar}
+    &i\hbar \frac{\partial }{\partial t}\Psi(x,t)=H\Psi(x,t);
+    &&\Psi(x,t)=\psi(x)e^{-iEt/\hbar};
     &&H\psi(x)=E\psi(x)
     &\\
     &\rho(x,t)=|\Psi(x,t)|^2;
     &&\frac{\partial}{\partial t}\rho(\textbf{x},t)+\nabla \cdot \textbf{J}(\textbf{x},t)=0;
     &&J(x,t)=\frac{i\hbar}{2m}\left( \Psi\frac{\partial \Psi^*}{\partial x}-\Psi^*\frac{\partial \Psi}{\partial x} \right)
     &\\
-    &p=\frac{\hbar}{i}\nabla
+    & \mathbf{J}(\mathbf{x},t)=\frac{h}{2im}\left( \psi^*\nabla\psi-\psi\nabla\psi^* \right)
+    &&p=\frac{\hbar}{i}\nabla;
     &&[x_i,p_j] = i\hbar \ \delta_{i,j}
 \end{flalign}
-A Hermitian operator $Q$ obey: $\int\psi^*(x)Q\psi(x)\,dx=\int(Q\psi(x))^*\psi(x)\,dx$, and $Q^\dagger = Q$.
+% A Hermitian operator $Q$ obey: $\int\psi^*(x)Q\psi(x)\,dx=\int(Q\psi(x))^*\psi(x)\,dx$, and $Q^\dagger = Q$.\\
+Hermitian conjugate $A^\dagger$ is defined by: $\int(A\psi(x))^*\psi(x),dx=\int\psi(x)A^\dagger\psi(x),dx$.
 \subsection*{\underline{Fourier Transform}}
 \begin{flalign}
     &\Psi(x)=\frac{1}{\sqrt{2\pi}}\int dk\Phi(k)e^{ikx},
@@ -74,6 +94,7 @@ A Hermitian operator $Q$ obey: $\int\psi^*(x)Q\psi(x)\,dx=\int(Q\psi(x))^*\psi(x
     &\\
     &\frac{1}{2\pi} \int_{-\infty}^\infty e^{ikx}dx = \delta(k)
     &&\frac{1}{(2\pi)^3} \int_{-\infty}^\infty e^{i\textbf{k}\cdot \textbf{x}}d^3x = \delta^{(3)}(k)
+    &&\Psi(x,t)=\frac{1}{(2\pi)^3}\int\phi(k)e^{i(\mathbf{k}\cdot\mathbf{x}-\omega(\mathbf{k})t)}\,dk^3
 \end{flalign}
 \subsection*{\underline{Wavepackets}}
 \begin{equation}
@@ -82,50 +103,56 @@ A Hermitian operator $Q$ obey: $\int\psi^*(x)Q\psi(x)\,dx=\int(Q\psi(x))^*\psi(x
 \subsection*{\underline{Complete Basis Set:}}
 Given that $H\psi_n(x)=E_n\psi_n(x);\quad \int\phi^*_n(x)\phi_m(x)dx=\delta_{nm}$, where $\{\phi_n\}$ is a complete set, then:
 \begin{align}
-    \psi(x)&=\sum_nc_n\phi_n(x)\\
+    \psi(x)&=\sum_nc_n\phi_n(x);\quad C_n=\int\psi^*_n(x)\psi(x)\,dx\\
     \int\psi^*(x)\psi(x)dx&=\sum_n|c_n|^2=1\\
     E&=\int\psi^*_n(x)H\psi_m(x)dx=\sum_n|c_n|^2E_n\\
     \Psi(x,0)&=\psi(x)=\sum_nc_n\phi_n(x)\implies\Psi(x,t)=\sum_nc_ne^{-iE_nt/\hbar}\phi_n(x)\\
     c_n&=\int\phi_n^*\Psi(x,0)dx
 \end{align}
 \subsection*{\underline{Commutator Properties:}}
-\begin{align}
-    &[A,A]=0;
-    &&[A,B]=-[B,A];
-    &&[A+B,C]=[A,C]+[B,C]
-    &\\
-    &[A,[B,C]]+[B,[C,A]]+[C,[A,B]]=0;
-    &&[AB,C]=[A,C]B+A[B,C];
-    &&[A,BC]=[A,B]C+B[A,C]
-\end{align}
-\subsection*{\underline{Operators:}}
-If $a$ is an eigenvalue of the operator $\hat{A}$, $\hat{A}\psi=a\psi$. Then, the following properties hold:
-\begin{itemize}
-    \item $\hat{A}^n\psi=a^n\psi,\quad \hat{A}^{-1}\psi=a^{-1}\psi,\quad e^{i\hat{A}}\psi=e^{ia}\psi,\quad F(\hat{A})\psi=F(a)\psi$
-    \item $\hat{A}^{\dagger}=A,\ \hat{A}\ket{\phi_n}=a_n\ket{\phi_n} \quad \implies a_n\in \mathbb{R}, \braket{\phi_m|\phi_n}=\delta_{mn}$
-    \item If $\{\phi_n\}$ is a complete and orthonormal for a Hermitian operator, then the operator is diagonal in the eigenbasis, $\{\phi_n\}$, with eigenvalues,, $\{a_n\}$, as the diagonal elements. The basis set is unique iff there are no degenerate eigenvalues.
-    \item If two Hermitian operators, $\hat{A}$ and $\hat{B}$, commute and have no degenerate eigenvalues. Then each eigenvector of $\hat{A}$ is also an eigenvector of $\hat{B}$. A common orthonormal basis can be made of the joint eigenvectors of $\hat{A}$ and $\hat{B}$.
-\end{itemize}
+\begin{equation}
+[A,A]=0;\quad
+[A,B]=-[B,A];\quad
+[A+B,C]=[A,C]+[B,C]\quad
+\end{equation}
+\begin{equation}
+[AB,C]=[A,C]B+A[B,C];\quad
+[A,BC]=[A,B]C+B[A,C];\quad
+\end{equation}
+\begin{equation}
+[A,[B,C]]+[B,[C,A]]+[C,[A,B]]=0
+\end{equation}
 \subsection*{\underline{Uncertainty Principle:}}
 \begin{align}
     &(\Delta Q)^2 = \braket{Q^2} - \braket{Q}^2 = \braket{(Q-\braket{Q})^2}
     &\Delta x \Delta p \geq \frac{\hbar}{2}
 \end{align}
 Where $\Delta Q$ is the uncertainity for the Hermitian Operator Q.
+\subsection*{\underline{Operators:}}
+For the operator $\hat{A}$, $\hat{A}\psi=a\psi$. $a$ in an eigenvalue and $\psi$ is an eigenfunction of $A$. Then, the following properties hold:
+\begin{itemize}
+    \item $\hat{A}^n\psi=a^n\psi,\quad \hat{A}^{-1}\psi=a^{-1}\psi,\quad e^{i\hat{A}}\psi=e^{ia}\psi,\quad F(\hat{A})\psi=F(a)\psi$
+    \item $\hat{A}^{\dagger}=A,\ \hat{A}\ket{\phi_n}=a_n\ket{\phi_n} \quad \implies a_n\in \mathbb{R}, \braket{\phi_m|\phi_n}=\delta_{mn}$
+    \item If $\{\phi_n\}$ is a complete and orthonormal for a Hermitian operator, then the operator is diagonal in the eigenbasis, $\{\phi_n\}$, with eigenvalues,, $\{a_n\}$, as the diagonal elements. The basis set is unique iff there are no degenerate eigenvalues.
+    \item If two Hermitian operators, $\hat{A}$ and $\hat{B}$, commute and have no degenerate eigenvalues. Then each eigenvector of $\hat{A}$ is also an eigenvector of $\hat{B}$. A common orthonormal basis can be made of the joint eigenvectors of $\hat{A}$ and $\hat{B}$.
+\end{itemize}
 \subsection*{\underline{1D Infinite Square Well:}}
 \begin{align}
-    &V(x)=\left\{
-        \begin{matrix}
-            0, 0\leq x\leq a\\
-            \infty, \mathrm{otherwise}
-        \end{matrix}
-    \right.
+    &H\psi_n(x)=E_n\psi_n(x)
+    &
+    &\int\psi^*_n(x)\psi_n(x)dx=\delta_{n,m}
+    \\
+    &\phi_n(x)=\sqrt{\frac{2}{a}}\sin\left( \frac{n\pi}{a}x \right)
+    &
+    &\phi_n(x,t)=\phi_n(x)e^{-iE_nt/\hbar}
+    \\
+    &V(x)=\left\{\begin{matrix}0, 0\leq x\leq a\\\infty, \mathrm{otherwise}\end{matrix}\right.
     &
     &E_n=\frac{\hbar^2k_n^2}{2m}=\frac{n^2\pi^2\hbar^2}{2ma^2}
     \\
-    &\Psi(x,t)=\sum_{n=1}^\infty c_n\sqrt{\frac{2}{a}}\sin\left( \frac{n\pi}{a}x \right)e^{-iE_nt/\hbar}
+    &\Psi(x,t)=\sum_{n=1}^\infty c_n\phi_n(x)e^{-iE_nt/\hbar}
     &
-    &c_n=\sqrt{\frac{2}{a}}\int_0^a\sin\left( \frac{n\pi}{a}x \right)\Psi(x,0)\,dx
+    &c_n=\int_0^a\phi_n(x)\Psi(x,0)\,dx
 \end{align}
 \subsection*{\underline{Particle on a Ring:}}
 \begin{align}
@@ -170,48 +197,41 @@ Where $\Delta Q$ is the uncertainity for the Hermitian Operator Q.
     &\xi\equiv\sqrt{\frac{m\omega}{\hbar}}x
     &
     &\mathcal{H}_n(\xi)=(-1)^ne^{\xi^2}\left( \frac{d}{d\xi} \right)^ne^{-\xi^2}
+    \\
+    &\psi_n(x)=\left( \frac{m\omega}{\pi\hbar} \right)^{1/4}\frac{1}{\sqrt{2^n n!}}\mathcal{H}_n(\xi)e^{-\xi^2/2}
+    &
+    &\int_{-\infty}^{+\infty}\mathcal{H}_n\mathcal{H}_me^{-x^2}dx=2^nn!\sqrt{\pi}\delta_{n,m}
 \end{align}
-\begin{equation}
-    \psi_n(x)=\left( \frac{m\omega}{\pi\hbar} \right)^{1/4}\frac{1}{\sqrt{2^n n!}}\mathcal{H}_n(\xi)e^{-\xi^2/2}
-\end{equation}
 \subsection*{\underline{Models of Dirac Delta Distribution $\delta(x)$:}}
 \begin{equation}
-    (1)\ \lim_{\alpha\rightarrow\infty}\frac{\sin(\alpha x)}{\pi x}\\
-    \qquad
-    (2)\ \lim_{\epsilon\rightarrow0^+}\frac{1}{2\pi}\int_{-\infty}^{\infty}e^{-ikx}e^{-\epsilon |k|}\,dk=\lim_{\epsilon\rightarrow0^+}\frac{\epsilon}{\pi (x^2+\epsilon^2)}\\
-    \qquad
-    (3)\ \lim_{\epsilon\rightarrow0}\frac{\Theta(x+\epsilon)-\Theta(\epsilon)}{\epsilon}
+\delta(x)=\lim_{\alpha\rightarrow\infty}\frac{\sin(\alpha x)}{\pi x};\ 
+\delta(x)=\lim_{\epsilon\rightarrow0^+}\frac{1}{2\pi}\int_{-\infty}^{\infty}e^{-ikx}e^{-\epsilon |k|}\,dk=\lim_{\epsilon\rightarrow0^+}\frac{\epsilon}{\pi (x^2+\epsilon^2)};\ 
+\delta(x)=\lim_{\epsilon\rightarrow0}\frac{\Theta(x+\epsilon)-\Theta(\epsilon)}{\epsilon}
 \end{equation}
 where $\Theta(x)$ is Heaviside or step function. 
-\subsection*{\underline{Bound State:}}
+\subsection*{\underline{Bound State of Single $\delta$-Potential:}}
 \begin{align}
     &V=-\alpha\delta(x), \ \alpha>0
     &
-    &\psi(x)=\sqrt{\frac{m\alpha}{\hbar^2}}\ e^{\frac{m\alpha}{\hbar^2}|\alpha|}
+    &\psi(x)=\sqrt{\frac{m\alpha}{\hbar^2}}\ e^{-\frac{m\alpha}{\hbar^2}|x|}
+    &
+    &E=-\frac{m\alpha^2}{2\hbar^2}
 \end{align}
-\begin{equation}
-    E=-\frac{m\alpha^2}{2\hbar^2}
-\end{equation}
 \subsection*{\underline{Scattering State:}}
 \begin{align}
-    &V(x)=\left\{
-        \begin{matrix}
-            Ae^{ikx}+Be^{-ikx}, x<0\\
-            Fe^{ikx}, x>0
-        \end{matrix}
-    \right.
+    &V(x)=-\alpha\delta(x)
     &
-    &\beta = \frac{m\alpha}{\hbar^2k}
+    &\psi(x)=\left\{\begin{matrix}Ae^{ikx}+Be^{-ikx}, x<0\\Fe^{ikx}, x>0\end{matrix}\right.
     \\
     &T=\frac{|F|^2}{|A|^2}=\frac{1}{1+\beta^2}
     &
-    &R=\frac{|B|^2}{|A|^2}=\frac{\beta}{1+\beta}
+    &R=\frac{|B|^2}{|A|^2}=\frac{\beta}{1+\beta}\qquad (\beta=m\alpha/\hbar^2k)
 \end{align}
 \subsection*{\underline{Miscellaneous:}}
 \begin{align}
-    \int_{-\infty}^\infty e^{-ax^2}\, dx=\sqrt{\frac{\pi}{a}}
+    \int_{-\infty}^\infty e^{-ax^2}\, dx=\sqrt{\frac{\pi}{a}};
     &&
-    \int_{-\infty}^\infty e^{-(ax^2+bx)}\,dx=e^{b^2/4a}\sqrt{\frac{\pi}{a}}
+    \int_{-\infty}^\infty e^{-(ax^2+bx)}\,dx=e^{b^2/4a}\sqrt{\frac{\pi}{a}};
     &&
     \delta_{ij}=\left\{
         \begin{matrix}
