--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -45,7 +45,7 @@ Plank energy spectral density: \resizebox{.4\hsize}{!}{$\rho(\nu)=\frac{8\pi h \
 \vspace{0.3cm}
 \hrule
 \subsection*{\underline{Photoelectric Effect:}}
-$W$ is the work function of irradiated metal. $V_e$ is the stopping potential.
+$W$ is the work function of irradiated metal. $V_s$ is the stopping potential.
 $$K=\sfrac{1}{2}\ mv^2=h\nu-W=\frac{hc}{\lambda}-W\ ;\quad K=\sfrac{1}{2}\ mv^2=|e|V_s\leftrightarrow V_s=\frac{K}{|e|}$$
 $$\nu\geq\frac{W}{h}=\nu_{\min};\quad \nu=\frac{1}{T}=\frac{c}{\lambda};\quad \nu=\frac{\omega}{2\pi}$$
 % \vspace{0.3cm}
