--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -15,8 +15,37 @@
 \rhead{Formula Sheet}
 
 \begin{document}
-\includepdf{Constants.pdf}
 \begin{center}\textbf{\underline{\huge{Formula Sheet}}}\end{center}
+\subsection*{\underline{Physical Constants:}}
+\begin{tabular}{lll}
+\hline Quantity & Symbol, equation & Value \\
+\hline Speed of light & $c$ & $2.9979 \times 10^{8} \mathrm{~m} \mathrm{~s}^{-1}$ \\
+Electron charge & $e$ & $1.602 \times 10^{-19} \mathrm{C}$ \\
+Planck constant & $h$ & $6.626 \times 10^{-34} \mathrm{Js}$ \\
+Planck constant, reduced & $\hbar=h / 2 \pi$ & $1.055 \times 10^{-34} \mathrm{~J} \mathrm{~s}$ \\
+Conversion constant & $\hbar c$ & $197.327 \mathrm{MeVfm}=197.327 \mathrm{eVnm}$ \\
+\hline Electron mass & $m_{e}$ & $9.109 \times 10^{-31} \mathrm{~kg}=0.511 \mathrm{MeV} / \mathrm{c}^{2}$ \\
+Proton mass & $m_{p}$ & $1.673 \times 10^{-27} \mathrm{~kg}^{2}=938.272 \mathrm{MeV} / \mathrm{c}^{2}$ \\
+Neutron mass & $m_{n}$ & $1.675 \times 10^{-27} \mathrm{~kg}=939.566 \mathrm{MeV} / \mathrm{c}^{2}$ \\
+\hline Fine structure constant & $\alpha=e^{2} / \hbar c$ & $1 / 137.036$ \\
+Classical electron radius & $r_{e}=e^{2} / m_{e} c^{2}$ & $2.818 \times 10^{-15} \mathrm{~m}$ \\
+Electron Compton wavelength & $\lambda=h / m_{e} c=r_{e} / \alpha$ & $2.426 \times 10^{-12} \mathrm{~m}$ \\
+Proton Compton wavelength & $\lambda=h / m_{p} c$ & $1.321 \times 10^{-15} \mathrm{~m}$ \\
+Bohr radius & $a_{0}=r_{e} / \alpha^{2}$ & $0.529 \times 10^{-10} \mathrm{~m}$ \\
+Rydberg energy & $\mathcal{R}=m_{e} c^{2} \alpha^{2} / 2$ & $13.606 \mathrm{eV}^{-11} \mathrm{MeV} \mathrm{T}^{-1}$ \\
+Bohr magneton & $\mu_{B}=e \hbar / 2 m_{e}$ & $5.788 \times 10^{-11}$ \\
+Nuclear magneton & $\mu_{N}=e \hbar / 2 m_{p}$ & $3.152 \times 10^{-14} \mathrm{MeV} \mathrm{T}^{-1}$ \\
+\hline Avogadro number & $N_{A}$ & $6.022 \times 10^{23} \mathrm{~mol}^{-1}$ \\
+Boltzmann constant & $k$ & $1.381 \times 10^{-23} \mathrm{~J} \mathrm{~K}^{-1}$ \\
+& & $=8.617 \times 10^{-5} \mathrm{eV} \mathrm{K}^{-1}$ \\
+Gas constant & $R=N_{A} k$ & $8.31 \mathrm{~J} \mathrm{~mol}{ }^{-1} \mathrm{~K}^{-1}$ \\
+Gravitational constant & $G$ & $6.673 \times 10^{-11} \mathrm{~m}^{3} \mathrm{~kg}^{-1} \mathrm{~s}^{-2}$ \\
+Permittivity of free space & $\epsilon_{0}=1 / \mu_{0} c^{2}$ & $8.854 \times 10^{-12} \mathrm{Fm}^{-1}$ \\
+Permeability of free space & $\mu_{0}$ & $4 \pi \times 10^{-7} \mathrm{~N} \mathrm{~A}^{-2}$ \\
+\hline & &
+\end{tabular}
+\subsection*{\underline{Conversion of units:}}
+$1 \mathrm{fm}=10^{-15} \mathrm{~m}$, $1 \mathrm{fm}=10^{-15} \mathrm{~m}, \quad 1$ barn $=10^{-28} \mathrm{~m}^{2}=100 \mathrm{fm}^{2}$, 1 atmosphere $=101325 \mathrm{~Pa}, \quad$ Thermal energy at $T=300 \mathrm{~K}: \quad k T=[38.682]^{-1} \mathrm{eV}$ $0^{\circ} \mathrm{C}=273.15 \mathrm{~K}, \quad 1 \mathrm{eV}=1.602 \times 10^{-19} \mathrm{~J}, \quad 1 \mathrm{eV} / \mathrm{c}^{2}=1.783 \times 10^{-36} \mathrm{~kg}$
 \subsection*{\underline{Properties of the Solution of 1D stationary Schrodinger Equation:}}
 \begin{enumerate}
 \item For 1D potential, all stationary solutions are non-degenerate.
