--- a/PHYS310FormulaSheet.tex
+++ b/PHYS310FormulaSheet.tex
@@ -295,6 +295,64 @@ Let A be a 2X2 matrix defined as:
     \hat{L}^{2}=-\hbar^{2}\left(\frac{\partial^{2}}{\partial \theta^{2}}+\cot \theta \frac{\partial}{\partial \theta}+\frac{1}{\sin ^{2} \theta} \frac{\partial^{2}}{\partial \phi^{2}}\right) \\
     \hat{L}_{z}=\frac{\hbar}{i} \frac{\partial}{\partial \phi} ; \quad \hat{L}_{\pm}=\hbar e^{\pm i \phi}\left(\pm \frac{\partial}{\partial \theta}+i \cot \theta \frac{\partial}{\partial \phi}\right)=\hat{L}_{x}\pm i\hat{L}_{y}
 \end{gather}
+\subsection*{\underline{General Momentum Operator}}
+\begin{flalign}
+    &\left[J_x, J_y\right]=i\hbar J_z
+    &&\left[J_z, J_x\right]=i\hbar J_y
+    &&\left[J_y, J_z\right]=i\hbar J_x
+    &\\
+    &J^2\ket{jm}=\hbar^2j(j+1)\ket{jm}
+    &&J_z\ket{jm}=\hbar m\ket{jm}
+    &&J^2=J^2_x + J^2_y + J^2_z
+\end{flalign}
+    $\ket{jm}$ are common eigenstates of the $J^2,J_z$;\\
+     Thus both $J^2$ and $J_z$ are diagonal matrices for any fixed value of J, the dimension of these matrices is $(2J+1) \times (2J+1)$ since $m=-J,-J+1,\dots,J-1,J,$ (2J+1 Values).
+$J=\frac{1}{2}\implies 2J+1=2 \implies 2\times2 matrices.\\$
+$J=1\implies 2J+1=3 \implies 3\times3 matrices.$
+\begin{flalign}    
+    &J_\pm=J_x \pm iJ_y
+    &&\sqrt{J(J+1)-m(m\pm1)}\ket{jm\pm1}
+\end{flalign}
+so that $J_\pm$ are off diagonal matrices.\\
+We oreder the eigenvectors for a fixed J-value as the following:\\
+$\ket{j,j}\quad\ket{j,j-1}\quad\ket{j,j-2}\quad \dots \quad\ket{j,-j}$
+\subsection*{\underline{Spin Angular Momentum Operator}}
+For $j=\frac{1}{2}\implies \ket{\frac{1}{2},\frac{1}{2}}; \ket{\frac{1}{2},-\frac{1}{2}} then:$
+\begin{flalign}
+    &S_x=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &1\\
+            1     &0
+        \end{matrix}\right)
+    &&S_y=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &-i\\
+            i     &0
+        \end{matrix}\right)
+    &&S_z=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            1     &0\\
+            0     &-1
+        \end{matrix}\right)
+    &\\
+    &\left[S_x, S_y\right]=i\hbar S_z
+    &&\left[S_z, S_x\right]=i\hbar S_y
+    &&\left[S_y, S_z\right]=i\hbar S_x
+    &\\
+    &S_+=S_x+iS_y
+    &&S_-=S_x-iS_y
+    &\\
+    &S_+=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &2\\
+            0     &0
+        \end{matrix}\right)
+    &&S_-=\frac{\hbar}{2}\left(
+        \begin{matrix}
+            0     &0\\
+            2     &0
+        \end{matrix}\right)
+\end{flalign}
 \subsection*{\underline{Spherical Harmonics:}}
 \begin{gather}
     Y_{\ell, m}(\theta, \phi) \equiv \mathcal{N}_{\ell, m} P_{\ell}^{m}(\cos \theta) e^{i m \phi}\\
